about:memory: Fix the missing margin around the page
The changes to global CSS needed for other pages made this necessary

--- a/src/resources/about.css
+++ b/src/resources/about.css
@@ -126,6 +126,10 @@ html.epiphany-html {
 
 /* about:memory */
 
+#memory {
+  margin: 20px;
+}
+
 .memory-table caption {
     font-size: 16pt;
     font-weight: bold;
